Adjust layout to avoid difficulty buttons being hidden by img

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -514,8 +514,8 @@ h1{
 }
 h1 {
   font-size: 3rem;
-  margin-top: 150px;
-  margin-bottom: 45px;
+  margin-top: 115px;
+  margin-bottom: 25px;
 }
 h2 {
   font-size: 2rem;
